--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
+    "@achingbrain/nat-port-mapper": "1.0.8",
     "chokidar": "^3.5.3",
     "genversion": "^3.1.1",
     "ipfs-core": "^0.18.1",
