--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Tests IPA
+name: Tests utils tests
 on:
   push:
     branches:
@@ -100,4 +100,4 @@ jobs:
         run: pnpm test:électron-principal
 
       - name: Envoyer couverure à Codecov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v3
