--- a/package.json
+++ b/package.json
@@ -33,28 +33,28 @@
   },
   "devDependencies": {
     "@constl/ipa": "^0.9.0",
-    "@types/crypto-js": "^4.1.1",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.5.4",
-    "@types/uuid": "^9.0.2",
+    "@types/crypto-js": "^4.1.3",
+    "@types/mocha": "^10.0.3",
+    "@types/node": "^20.8.9",
+    "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.4.1",
+    "@typescript-eslint/parser": "^6.9.0",
     "aegir": "^41.0.0",
     "browserify-fs": "^1.0.0",
     "buffer": "^6.0.3",
-    "core-js": "^3.32.1",
+    "core-js": "^3.33.1",
     "crypto-browserify": "^3.12.0",
-    "eslint": "^8.47.0",
+    "eslint": "^8.52.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "mocha": "^10.2.0",
     "os-browserify": "^0.3.0",
-    "playwright": "^1.37.1",
-    "prettier": "^3.0.2",
+    "playwright": "^1.39.0",
+    "prettier": "^3.0.3",
     "process": "^0.11.10",
     "source-map-support": "^0.5.21",
     "ts-patch": "^3.0.2",
@@ -64,20 +64,18 @@
     "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
-    "@achingbrain/nat-port-mapper": "1.0.12",
     "@orbitdb/core": "^1.0.0",
     "chokidar": "^3.5.3",
     "genversion": "^3.1.1",
     "ipfs-core": "^0.18.1",
-    "rimraf": "^5.0.1",
+    "rimraf": "^5.0.5",
     "uint8arrays": "^4.0.6",
-    "uuid": "^9.0.0",
+    "uuid": "^9.0.1",
     "wherearewe": "^2.0.1"
   },
   "resolutions": {
     "iso-constants": "git+https://github.com/inverted-capital/iso-constants.git#patch-1",
-    "ipfs-pubsub-1on1": "git+https://github.com/ipfs-shipyard/ipfs-pubsub-1on1.git",
-    "@ca9io/electron-webrtc-relay": "git+https://github.com/julienmalard/electron-wrtc-relay.git"
+    "ipfs-pubsub-1on1": "git+https://github.com/ipfs-shipyard/ipfs-pubsub-1on1.git"
   },
   "overrides": {
     "iso-constants": {
@@ -85,12 +83,6 @@
     },
     "ipfs-pubsub-1on1": {
       ".": "git+https://github.com/ipfs-shipyard/ipfs-pubsub-1on1.git"
-    },
-    "@ca9io/electron-webrtc-relay": {
-      ".": "git+https://github.com/julienmalard/electron-wrtc-relay.git"
     }
-  },
-  "peerDependencies": {
-    "wrtc": "^0.4.7"
   }
 }
