--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "nettoyer": "rimraf dist",
-    "compiler": "pnpm versioner && pnpm nettoyer && pnpm tspc -p tsconfig.build.json",
+    "compiler": "pnpm versioner && pnpm formatter && pnpm nettoyer && pnpm tspc -p tsconfig.build.json",
     "test:node": "pnpm compiler && pnpm aegir test -t node --cov -- --exit",
     "test:navig": "pnpm compiler && pnpm aegir test -t browser --cov",
     "test:électron-principal": "pnpm compiler && pnpm aegir test -t electron-main --cov",
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@constl/ipa": "^0.9.5",
     "@types/crypto-js": "^4.1.3",
+    "@types/file-saver": "^2.0.7",
     "@types/mocha": "^10.0.3",
     "@types/node": "^20.8.9",
     "@types/uuid": "^9.0.6",
@@ -51,6 +52,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
+    "file-saver": "^2.0.5",
     "mocha": "^10.2.0",
     "playwright": "^1.41.1",
     "prettier": "^3.2.4",
@@ -67,6 +69,7 @@
     "blockstore-core": "^4.3.10",
     "blockstore-level": "^1.1.7",
     "chokidar": "^3.5.3",
+    "events": "^3.3.0",
     "genversion": "^3.2.0",
     "helia": "^3.0.1",
     "libp2p": "^1.2.0",
