Premiers tests passent

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "formatter": "pnpm prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\" && pnpm eslint --ext .js,.ts src",
     "publier": "pnpm versioner && pnpm compiler && (git commit -a -m 'version' || true) && pnpm publish",
     "versioner": "pnpm genversion  --es6 --semi src/version.ts",
-    "webrtc": "node ./dist/test/utils/relai.js &"
+    "webrtc": "node ./test/utils/relai.js &"
   },
   "watch": {
     "build": {
@@ -35,7 +35,6 @@
   "devDependencies": {
     "@chainsafe/libp2p-noise": "^15.0.0",
     "@chainsafe/libp2p-yamux": "^6.0.1",
-    "@constl/ipa": "^0.9.5",
     "@libp2p/circuit-relay-v2": "^1.0.13",
     "@libp2p/crypto": "^4.0.1",
     "@libp2p/identify": "^1.0.12",
@@ -43,19 +42,20 @@
     "@libp2p/websockets": "^8.0.13",
     "@multiformats/multiaddr": "^12.1.14",
     "@multiformats/multiaddr-matcher": "^1.1.2",
-    "@types/crypto-js": "^4.1.3",
+    "@orbitdb/feed-db": "^1.0.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/file-saver": "^2.0.7",
-    "@types/mocha": "^10.0.3",
-    "@types/node": "^20.8.9",
-    "@types/uuid": "^9.0.6",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.9.0",
-    "aegir": "^42.0.0",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.11.10",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
+    "aegir": "^42.2.2",
     "browserify-fs": "^1.0.0",
     "buffer": "^6.0.3",
-    "core-js": "^3.33.1",
+    "core-js": "^3.35.1",
     "crypto-browserify": "^3.12.0",
-    "eslint": "^8.52.0",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
@@ -65,9 +65,12 @@
     "file-saver": "^2.0.5",
     "keys": "link:@libp2p/crypto/keys",
     "mocha": "^10.2.0",
+    "os-browserify": "^0.3.0",
     "playwright": "^1.41.1",
     "prettier": "^3.2.4",
+    "process": "^0.11.10",
     "source-map-support": "^0.5.21",
+    "stream-browserify": "^3.0.0",
     "ts-patch": "^3.1.2",
     "tsconfig-paths": "^4.2.0",
     "tscpaths": "^0.0.9",
@@ -75,7 +78,7 @@
     "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
-    "@helia/block-brokers": "^1.0.0",
+    "@helia/block-brokers": "^2.0.0",
     "@orbitdb/quickstart": "^1.0.0",
     "blockstore-core": "^4.3.10",
     "blockstore-level": "^1.1.7",
@@ -83,9 +86,9 @@
     "events": "^3.3.0",
     "genversion": "^3.2.0",
     "helia": "^3.0.1",
-    "libp2p": "^1.2.0",
+    "libp2p": "^1.2.1",
     "rimraf": "^5.0.5",
-    "uint8arrays": "^5.0.0",
+    "uint8arrays": "^5.0.1",
     "uuid": "^9.0.1",
     "wherearewe": "^2.0.1"
   }
