--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -97,7 +97,8 @@ jobs:
         run: npx playwright install
 
       - name: Vérifier les tests
-        run: pnpm test:électron-principal
+        # De cawa-93/vite-electron-builder
+        run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- pnpm run test:électron-principal
 
       - name: Envoyer couverure à Codecov
         uses: codecov/codecov-action@v3
