--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@chainsafe/libp2p-gossipsub": "^11.2.0",
     "@chainsafe/libp2p-noise": "^15.0.0",
     "@chainsafe/libp2p-yamux": "^6.0.1",
-    "@constl/ipa": "0.9.26-fd39d6da4.0",
+    "@constl/ipa": "1.0.1-76af3ada9.0",
     "@libp2p/circuit-relay-v2": "^1.0.13",
     "@libp2p/crypto": "^4.0.1",
     "@libp2p/identify": "^1.0.12",
@@ -64,6 +64,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
+    "execa": "^8.0.1",
     "file-saver": "^2.0.5",
     "keys": "link:@libp2p/crypto/keys",
     "mocha": "^10.2.0",
