--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "nettoyer": "rimraf dist",
     "compiler": "pnpm versioner && pnpm formatter && pnpm nettoyer && pnpm tspc -p tsconfig.build.json",
-    "test:node": "pnpm compiler && pnpm aegir test -t node",
+    "test:node": "pnpm compiler && pnpm aegir test -t node -- --exit",
     "test:navig": "pnpm compiler && pnpm webrtc && pnpm aegir test -t browser --cov",
     "test:électron-principal": "pnpm compiler && pnpm aegir test -t electron-main --cov",
     "test:électron-rendu": "pnpm compiler && pnpm webrtc && pnpm aegir test -t electron-renderer --cov",
