Pas nécessaire pour le navigateur

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,10 +41,7 @@ jobs:
   
   test-ipa-navig:
     name: IPA sur le navigateur
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       
       - name: Ouvrir la branche
