Inclure configuration Ægir

--- a/package.json
+++ b/package.json
@@ -35,28 +35,29 @@
   "devDependencies": {
     "@chainsafe/libp2p-gossipsub": "^12.0.0",
     "@chainsafe/libp2p-noise": "^15.0.0",
-    "@chainsafe/libp2p-yamux": "^6.0.1",
+    "@chainsafe/libp2p-yamux": "^6.0.2",
     "@constl/ipa": "1.0.0",
-    "@libp2p/circuit-relay-v2": "^1.0.13",
-    "@libp2p/crypto": "^4.0.1",
-    "@libp2p/identify": "^1.0.12",
-    "@libp2p/peer-id-factory": "^4.0.5",
-    "@libp2p/websockets": "^8.0.13",
+    "@libp2p/circuit-relay-v2": "^1.0.15",
+    "@libp2p/crypto": "^4.0.2",
+    "@libp2p/identify": "^1.0.14",
+    "@libp2p/peer-id-factory": "^4.0.6",
+    "@libp2p/websockets": "^8.0.15",
     "@multiformats/multiaddr": "^12.1.14",
     "@multiformats/multiaddr-matcher": "^1.1.2",
     "@orbitdb/feed-db": "^1.0.0",
     "@types/crypto-js": "^4.2.2",
     "@types/file-saver": "^2.0.7",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.11.16",
+    "@types/node": "^20.11.19",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "aegir": "^42.2.3",
+    "aegir": "^42.2.4",
     "browserify-fs": "^1.0.0",
     "buffer": "^6.0.3",
-    "core-js": "^3.35.1",
+    "core-js": "^3.36.0",
     "crypto-browserify": "^3.12.0",
+    "esbuild": "^0.20.1",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -67,7 +68,7 @@
     "execa": "^8.0.1",
     "file-saver": "^2.0.5",
     "keys": "link:@libp2p/crypto/keys",
-    "mocha": "^10.2.0",
+    "mocha": "^10.3.0",
     "os-browserify": "^0.3.0",
     "playwright": "^1.41.2",
     "prettier": "^3.2.5",
@@ -78,20 +79,20 @@
     "tsconfig-paths": "^4.2.0",
     "tscpaths": "^0.0.9",
     "typescript": "5.3.3",
-    "typescript-transform-paths": "^3.4.6"
+    "typescript-transform-paths": "^3.4.7"
   },
   "dependencies": {
     "@helia/block-brokers": "^2.0.1",
     "@orbitdb/quickstart": "^1.0.0",
-    "blockstore-core": "^4.3.10",
-    "blockstore-level": "^1.1.7",
-    "chokidar": "^3.5.3",
+    "blockstore-core": "^4.4.0",
+    "blockstore-level": "^1.1.8",
+    "chokidar": "^3.6.0",
     "events": "^3.3.0",
     "genversion": "^3.2.0",
     "helia": "^3.0.1",
-    "libp2p": "^1.2.1",
+    "libp2p": "^1.2.3",
     "rimraf": "^5.0.5",
-    "uint8arrays": "^5.0.1",
+    "uint8arrays": "^5.0.2",
     "uuid": "^9.0.1",
     "wherearewe": "^2.0.1"
   }
