--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "aegir": "^42.2.5",
     "buffer": "^6.0.3",
     "core-js": "^3.36.0",
+    "electron": "^30.0.6",
     "esbuild": "^0.20.1",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
