--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.5",
+  "version": "1.2.6",
   "license": "AGPL-3.0-or-later",
   "name": "@constl/utils-tests",
   "author": "Julien Jean Malard-Adam",
@@ -35,50 +35,51 @@
     "@chainsafe/libp2p-gossipsub": "^11.2.1",
     "@chainsafe/libp2p-noise": "^15.0.0",
     "@chainsafe/libp2p-yamux": "^6.0.2",
-    "@constl/ipa": "1.0.17",
-    "@libp2p/circuit-relay-v2": "^1.0.16",
-    "@libp2p/crypto": "^4.0.3",
-    "@libp2p/identify": "^1.0.15",
-    "@libp2p/peer-id-factory": "^4.0.7",
-    "@libp2p/websockets": "^8.0.16",
-    "@multiformats/multiaddr": "^12.1.14",
-    "@multiformats/multiaddr-matcher": "^1.1.2",
+    "@constl/ipa": "1.0.21",
+    "@libp2p/circuit-relay-v2": "^1.0.24",
+    "@libp2p/crypto": "^4.1.2",
+    "@libp2p/identify": "^1.0.21",
+    "@libp2p/peer-id-factory": "^4.1.2",
+    "@libp2p/websockets": "^8.0.24",
+    "@multiformats/multiaddr": "^12.2.3",
+    "@multiformats/multiaddr-matcher": "^1.2.3",
     "@orbitdb/feed-db": "^1.0.0",
     "@types/crypto-js": "^4.2.2",
     "@types/file-saver": "^2.0.7",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.11.21",
+    "@types/node": "^20.14.1",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
-    "aegir": "^42.2.5",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
+    "aegir": "^42.2.11",
     "buffer": "^6.0.3",
-    "core-js": "^3.36.0",
-    "electron": "^30.0.6",
-    "esbuild": "^0.20.1",
+    "core-js": "^3.37.1",
+    "electron": "^30.0.9",
+    "esbuild": "^0.20.2",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-promise": "^6.2.0",
     "execa": "^8.0.1",
     "keys": "link:@libp2p/crypto/keys",
-    "mocha": "^10.3.0",
-    "playwright": "^1.42.0",
-    "prettier": "^3.2.5",
+    "mocha": "^10.4.0",
+    "playwright": "^1.44.1",
+    "prettier": "^3.3.0",
     "source-map-support": "^0.5.21",
-    "ts-patch": "^3.1.2",
+    "ts-patch": "^3.2.0",
     "tsconfig-paths": "^4.2.0",
     "tscpaths": "^0.0.9",
     "typescript": "5.3.3",
-    "typescript-transform-paths": "^3.4.7"
+    "typescript-transform-paths": "^3.4.7",
+    "url-polyfill": "^1.1.12"
   },
   "dependencies": {
     "@helia/block-brokers": "^1.0.0",
     "@orbitdb/quickstart": "^1.0.0",
-    "blockstore-core": "^4.4.0",
+    "blockstore-core": "^4.4.1",
     "blockstore-level": "^1.1.8",
     "browserify-fs": "^1.0.0",
     "chokidar": "^3.6.0",
@@ -86,13 +87,13 @@
     "events": "^3.3.0",
     "genversion": "^3.2.0",
     "helia": "^3.0.1",
-    "libp2p": "^1.2.4",
+    "libp2p": "^1.6.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "read-package-up": "^11.0.0",
-    "rimraf": "^5.0.5",
+    "rimraf": "^5.0.7",
     "stream-browserify": "^3.0.0",
-    "uint8arrays": "^5.0.2",
+    "uint8arrays": "^5.1.0",
     "uuid": "^9.0.1",
     "wherearewe": "^2.0.1"
   }
