--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,7 +45,7 @@ jobs:
   
   test-ipa-navig:
     name: IPA sur le navigateur
-    if: false;
+    if: false
     runs-on: ubuntu-latest
     steps:
       
