--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@libp2p/circuit-relay-v2": "^1.1.2",
     "@libp2p/crypto": "^4.1.6",
     "@libp2p/identify": "^2.1.2",
+    "@libp2p/interface": "^1.6.1",
     "@libp2p/peer-id-factory": "^4.2.1",
     "@libp2p/websockets": "^8.1.2",
     "@multiformats/multiaddr": "^12.3.0",
