--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:électron-rendu": "pnpm compiler && pnpm aegir test -t electron-renderer --cov",
     "test": "pnpm test:node && pnpm test:navig",
     "formatter": "pnpm prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\" && pnpm eslint src",
-    "publier": "pnpm formatter && pnpm test && (git commit -a -m 'version' || true) && pnpm publish",
+    "publier": "pnpm test && (git commit -a -m 'version' || true) && pnpm publish",
     "versioner": "pnpm genversion  --es6 --semi src/version.ts"
   },
   "watch": {
