Ajuster dossier compilation

--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "name": "@constl/utils-tests",
   "author": "Julien Jean Malard-Adam",
   "type": "module",
-  "types": "./dist/src/index.d.ts",
-  "exports": "./dist/src/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": "./dist/index.js",
   "engines": {
     "node": ">=20"
   },
   "scripts": {
     "nettoyer": "rimraf dist",
-    "compiler": "pnpm versioner && pnpm formatter && pnpm nettoyer && pnpm tspc -p tsconfig.build.json",
+    "compiler": "pnpm versioner && pnpm formatter && pnpm nettoyer && pnpm tspc -p tsconfig.json",
+    "compiler:prod": "pnpm versioner && pnpm formatter && pnpm nettoyer && pnpm tspc -p tsconfig.build.json",
     "test:node": "pnpm compiler && pnpm aegir test -t node --cov -- --exit",
     "test:navig": "pnpm compiler && pnpm aegir test -t browser --cov",
     "test:électron-principal": "pnpm compiler && pnpm aegir test -t electron-main --cov",
     "test:électron-rendu": "pnpm compiler && pnpm aegir test -t electron-renderer --cov",
     "test": "pnpm test:node && pnpm test:navig",
     "formatter": "pnpm prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\" && pnpm eslint src",
-    "publier": "pnpm test && (git commit -a -m 'version' || true) && pnpm publish",
+    "publier": "pnpm test && pnpm compiler:prod && (git commit -a -m 'version' || true) && pnpm publish",
     "versioner": "pnpm genversion  --es6 --semi src/version.ts"
   },
   "watch": {
