--- a/package.json
+++ b/package.json
@@ -33,63 +33,63 @@
     "postbuild": "./dist/**/*"
   },
   "devDependencies": {
-    "@chainsafe/libp2p-gossipsub": "^13.1.0",
-    "@chainsafe/libp2p-noise": "^15.1.0",
-    "@chainsafe/libp2p-yamux": "^7.0.0",
-    "@constl/ipa": "1.2.7",
-    "@eslint/js": "^9.7.0",
-    "@libp2p/circuit-relay-v2": "^1.1.2",
-    "@libp2p/crypto": "^4.1.6",
-    "@libp2p/identify": "^2.1.2",
-    "@libp2p/interface": "^2.0.0",
-    "@libp2p/peer-id-factory": "^4.2.1",
-    "@libp2p/websockets": "^8.1.2",
-    "@multiformats/multiaddr": "^12.3.0",
-    "@multiformats/multiaddr-matcher": "^1.2.4",
+    "@chainsafe/libp2p-gossipsub": "^13.2.0",
+    "@chainsafe/libp2p-noise": "^15.1.2",
+    "@chainsafe/libp2p-yamux": "^7.0.1",
+    "@constl/ipa": "1.2.3",
+    "@eslint/js": "^9.12.0",
+    "@libp2p/circuit-relay-v2": "^1.1.5",
+    "@libp2p/crypto": "^4.1.9",
+    "@libp2p/identify": "^2.1.5",
+    "@libp2p/interface": "^1.7.0",
+    "@libp2p/peer-id-factory": "^4.2.4",
+    "@libp2p/websockets": "^8.2.0",
+    "@multiformats/multiaddr": "^12.3.1",
+    "@multiformats/multiaddr-matcher": "^1.2.6",
     "@orbitdb/feed-db": "^1.0.1",
     "@types/crypto-js": "^4.2.2",
     "@types/file-saver": "^2.0.7",
-    "@types/mocha": "^10.0.7",
-    "@types/node": "^20.14.11",
+    "@types/mocha": "^10.0.9",
+    "@types/node": "^20.16.11",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@typescript-eslint/parser": "^7.16.1",
-    "aegir": "^44.0.1",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "aegir": "^44.1.2",
     "buffer": "^6.0.3",
-    "core-js": "^3.37.1",
-    "electron": "^31.4.0",
+    "core-js": "^3.38.1",
+    "electron": "^31.6.0",
     "esbuild": "^0.24.0",
-    "eslint": "^9.7.0",
+    "eslint": "^9.12.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^17.9.0",
-    "eslint-plugin-promise": "^7.0.0",
-    "execa": "^9.3.0",
-    "mocha": "^10.6.0",
-    "playwright": "^1.45.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.11.0",
+    "eslint-plugin-promise": "^7.1.0",
+    "execa": "^9.4.0",
+    "mocha": "^10.7.3",
+    "playwright": "^1.48.0",
     "prettier": "^3.3.3",
     "source-map-support": "^0.5.21",
     "ts-patch": "^3.2.1",
     "tsconfig-paths": "^4.2.0",
     "tscpaths": "^0.0.9",
     "typescript": "5.5.4",
-    "typescript-eslint": "^7.16.1",
-    "typescript-transform-paths": "^3.4.7"
+    "typescript-eslint": "^7.18.0",
+    "typescript-transform-paths": "^3.5.1"
   },
   "dependencies": {
-    "@helia/block-brokers": "^3.0.2",
-    "@orbitdb/quickstart": "git+https://github.com/orbitdb/quickstart.git#1557ffe",
-    "blockstore-core": "^5.0.0",
+    "@helia/block-brokers": "^3.0.4",
+    "@orbitdb/quickstart": "github:orbitdb/quickstart#1557ffe",
+    "blockstore-core": "^5.0.2",
     "blockstore-level": "^1.1.8",
     "browserify-fs": "^1.0.0",
     "chokidar": "^3.6.0",
     "crypto-browserify": "^3.12.0",
     "events": "^3.3.0",
     "genversion": "^3.2.0",
-    "helia": "^4.2.4",
-    "libp2p": "^1.8.1",
+    "helia": "^4.2.6",
+    "libp2p": "^1.9.4",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "read-package-up": "^11.0.0",
