--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@chainsafe/libp2p-noise": "^16.0.0",
     "@chainsafe/libp2p-yamux": "^7.0.1",
     "@constl/ipa": "1.2.7",
+    "@constl/orbit-db-types": "^2.0.3",
     "@eslint/js": "^9.13.0",
     "@libp2p/circuit-relay-v2": "^3.0.0",
     "@libp2p/crypto": "^5.0.5",
@@ -50,14 +51,14 @@
     "@types/crypto-js": "^4.2.2",
     "@types/file-saver": "^2.0.7",
     "@types/mocha": "^10.0.9",
-    "@types/node": "^20.17.1",
+    "@types/node": "^22.8.1",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
     "aegir": "^44.1.4",
     "buffer": "^6.0.3",
     "core-js": "^3.38.1",
-    "electron": "^31.7.2",
+    "electron": "^33.0.2",
     "esbuild": "^0.24.0",
     "eslint": "^9.13.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -75,17 +76,18 @@
     "tsconfig-paths": "^4.2.0",
     "tscpaths": "^0.0.9",
     "typescript": "5.5.4",
-    "typescript-eslint": "^7.18.0",
+    "typescript-eslint": "^8.11.0",
     "typescript-transform-paths": "^3.5.1"
   },
   "dependencies": {
     "@helia/block-brokers": "^4.0.1",
     "@libp2p/peer-id": "^5.0.6",
+    "@libp2p/webrtc": "^5.0.14",
     "@orbitdb/quickstart": "github:orbitdb/quickstart#1557ffe",
     "blockstore-core": "^5.0.2",
     "blockstore-level": "^2.0.1",
     "browserify-fs": "^1.0.0",
-    "chokidar": "^3.6.0",
+    "chokidar": "^4.0.1",
     "crypto-browserify": "^3.12.1",
     "events": "^3.3.0",
     "genversion": "^3.2.0",
@@ -98,7 +100,7 @@
     "stream-browserify": "^3.0.0",
     "uint8arrays": "^5.1.0",
     "url-polyfill": "^1.1.12",
-    "uuid": "^10.0.0",
+    "uuid": "^11.0.1",
     "wherearewe": "^2.0.1"
   },
   "pnpm": {
