--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.5.0",
+  "version": "1.6.0",
   "license": "AGPL-3.0-or-later",
   "name": "@constl/utils-tests",
   "author": "Julien Jean Malard-Adam",
@@ -36,14 +36,14 @@
     "@chainsafe/libp2p-gossipsub": "14.1.0",
     "@chainsafe/libp2p-noise": "^16.0.0",
     "@chainsafe/libp2p-yamux": "^7.0.1",
+    "@constl/bohr-db": "^1.2.0",
     "@constl/ipa": "1.2.7",
-    "@constl/orbit-db-types": "^2.0.3",
+    "@constl/orbit-db-types": "^2.0.5",
     "@eslint/js": "^9.13.0",
     "@libp2p/circuit-relay-v2": "^3.0.0",
     "@libp2p/crypto": "^5.0.5",
     "@libp2p/identify": "^3.0.9",
     "@libp2p/interface": "^2.1.3",
-    "@libp2p/peer-id-factory": "^4.2.4",
     "@libp2p/websockets": "^9.0.9",
     "@multiformats/multiaddr": "^12.3.1",
     "@multiformats/multiaddr-matcher": "^1.3.0",
@@ -56,6 +56,7 @@
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
     "aegir": "^44.1.4",
+    "ajv": "^8.17.1",
     "buffer": "^6.0.3",
     "core-js": "^3.38.1",
     "electron": "^33.0.2",
@@ -83,7 +84,7 @@
     "@helia/block-brokers": "^4.0.1",
     "@libp2p/peer-id": "^5.0.6",
     "@libp2p/webrtc": "^5.0.14",
-    "@orbitdb/quickstart": "github:orbitdb/quickstart#1557ffe",
+    "@orbitdb/core": "^2.3.0",
     "blockstore-core": "^5.0.2",
     "blockstore-level": "^2.0.1",
     "browserify-fs": "^1.0.0",
