--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "crypto-browserify": "^3.12.1",
     "events": "^3.3.0",
     "genversion": "^3.2.0",
-    "helia": "^5.1.0",
+    "helia": "5.1.0",
     "libp2p": "^2.1.10",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
