--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.6.3",
+  "version": "1.6.4",
   "license": "AGPL-3.0-or-later",
   "name": "@constl/utils-tests",
   "author": "Julien Jean Malard-Adam",
@@ -36,55 +36,55 @@
     "@chainsafe/libp2p-gossipsub": "14.1.0",
     "@chainsafe/libp2p-noise": "^16.0.0",
     "@chainsafe/libp2p-yamux": "^7.0.1",
-    "@constl/bohr-db": "^1.2.0",
+    "@constl/bohr-db": "^1.2.1",
     "@constl/ipa": "1.4.4",
-    "@constl/orbit-db-types": "^2.0.6",
-    "@eslint/js": "^9.13.0",
-    "@libp2p/circuit-relay-v2": "^3.1.0",
-    "@libp2p/crypto": "^5.0.6",
-    "@libp2p/identify": "^3.0.10",
-    "@libp2p/interface": "^2.2.0",
-    "@libp2p/websockets": "^9.0.10",
-    "@multiformats/multiaddr": "^12.3.1",
-    "@multiformats/multiaddr-matcher": "^1.3.0",
-    "@orbitdb/feed-db": "^1.1.0",
+    "@eslint/js": "^9.15.0",
+    "@libp2p/circuit-relay-v2": "^3.1.3",
+    "@libp2p/crypto": "^5.0.7",
+    "@libp2p/identify": "^3.0.12",
+    "@libp2p/interface": "^2.2.1",
+    "@libp2p/websockets": "^9.0.13",
+    "@multiformats/multiaddr": "^12.3.3",
+    "@multiformats/multiaddr-matcher": "^1.6.0",
+    "@orbitdb/core-types": "^1.0.10",
+    "@orbitdb/feed-db": "^1.1.1",
     "@types/crypto-js": "^4.2.2",
     "@types/file-saver": "^2.0.7",
-    "@types/mocha": "^10.0.9",
-    "@types/node": "^22.8.1",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.10.0",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.11.0",
-    "@typescript-eslint/parser": "^8.11.0",
-    "aegir": "^45.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
+    "aegir": "^45.0.2",
     "ajv": "^8.17.1",
     "buffer": "^6.0.3",
-    "core-js": "^3.38.1",
-    "electron": "^33.0.2",
+    "core-js": "^3.39.0",
+    "electron": "^33.2.0",
     "esbuild": "^0.24.0",
-    "eslint": "^9.13.0",
+    "eslint": "^9.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^17.11.1",
-    "eslint-plugin-promise": "^7.1.0",
-    "execa": "^9.5.0",
-    "mocha": "^10.7.3",
-    "playwright": "^1.48.2",
-    "prettier": "^3.3.3",
+    "eslint-plugin-n": "^17.14.0",
+    "eslint-plugin-promise": "^7.2.0",
+    "execa": "^9.5.1",
+    "mocha": "^10.8.2",
+    "playwright": "^1.49.0",
+    "prettier": "^3.4.0",
     "source-map-support": "^0.5.21",
     "ts-patch": "^3.2.1",
     "tsconfig-paths": "^4.2.0",
     "tscpaths": "^0.0.9",
     "typescript": "5.6.3",
-    "typescript-eslint": "^8.11.0",
-    "typescript-transform-paths": "^3.5.1"
+    "typescript-eslint": "^8.16.0",
+    "typescript-transform-paths": "^3.5.2"
   },
   "dependencies": {
-    "@helia/block-brokers": "^4.0.1",
-    "@libp2p/peer-id": "^5.0.7",
-    "@libp2p/webrtc": "^5.0.15",
-    "@orbitdb/core": "^2.3.0",
+    "@helia/block-brokers": "^4.0.2",
+    "@libp2p/peer-id": "^5.0.8",
+    "@libp2p/webrtc": "^5.0.19",
+    "@orbitdb/core": "^2.4.3",
     "blockstore-core": "^5.0.2",
     "blockstore-level": "^2.0.1",
     "browserify-fs": "^1.0.0",
@@ -93,7 +93,7 @@
     "events": "^3.3.0",
     "genversion": "^3.2.0",
     "helia": "5.1.1",
-    "libp2p": "^2.2.0",
+    "libp2p": "^2.3.1",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "read-package-up": "^11.0.0",
@@ -101,7 +101,7 @@
     "stream-browserify": "^3.0.0",
     "uint8arrays": "^5.1.0",
     "url-polyfill": "^1.1.12",
-    "uuid": "^11.0.1",
+    "uuid": "^11.0.3",
     "wherearewe": "^2.0.1"
   }
 }
