--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@chainsafe/libp2p-noise": "^16.0.0",
     "@chainsafe/libp2p-yamux": "^7.0.1",
     "@constl/bohr-db": "^1.2.1",
-    "@constl/ipa": "1.4.8",
+    "@constl/ipa": "1.5.7",
     "@eslint/js": "^9.15.0",
     "@libp2p/circuit-relay-v2": "^3.1.3",
     "@libp2p/crypto": "^5.0.7",
@@ -104,5 +104,8 @@
     "url-polyfill": "^1.1.12",
     "uuid": "^11.0.3",
     "wherearewe": "^2.0.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": ["@localfirst/auth", "@localfirst/crdx", "@localfirst/crypto", "@localfirst/shared", "classic-level", "core-js", "electron", "esbuild", "iso-constants", "msgpackr-extract", "node-datachannel"]
   }
 }
