--- a/package.json
+++ b/package.json
@@ -34,78 +34,90 @@
   },
   "devDependencies": {
     "@chainsafe/libp2p-gossipsub": "14.1.0",
-    "@chainsafe/libp2p-noise": "^16.0.0",
+    "@chainsafe/libp2p-noise": "^16.0.1",
     "@chainsafe/libp2p-yamux": "^7.0.1",
-    "@constl/bohr-db": "^1.2.1",
+    "@constl/bohr-db": "^1.2.2",
     "@constl/ipa": "1.5.7",
-    "@eslint/js": "^9.15.0",
-    "@libp2p/circuit-relay-v2": "^3.1.3",
-    "@libp2p/crypto": "^5.0.7",
-    "@libp2p/identify": "^3.0.12",
-    "@libp2p/interface": "^2.2.1",
-    "@libp2p/websockets": "^9.0.13",
-    "@multiformats/multiaddr": "^12.3.3",
+    "@eslint/js": "^9.20.0",
+    "@libp2p/circuit-relay-v2": "^3.1.11",
+    "@libp2p/crypto": "^5.0.11",
+    "@libp2p/identify": "^3.0.18",
+    "@libp2p/interface": "^2.5.0",
+    "@libp2p/websockets": "^9.1.5",
+    "@multiformats/multiaddr": "^12.3.5",
     "@multiformats/multiaddr-matcher": "^1.6.0",
-    "@orbitdb/core-types": "^1.0.10",
+    "@orbitdb/core-types": "^1.0.11",
     "@orbitdb/feed-db": "^1.1.1",
     "@types/crypto-js": "^4.2.2",
     "@types/file-saver": "^2.0.7",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^22.10.0",
+    "@types/node": "^22.13.1",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "@typescript-eslint/parser": "^8.16.0",
-    "aegir": "^45.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.24.0",
+    "@typescript-eslint/parser": "^8.24.0",
+    "aegir": "^45.0.9",
     "ajv": "^8.17.1",
     "buffer": "^6.0.3",
-    "core-js": "^3.39.0",
-    "electron": "^34.0.0",
-    "esbuild": "^0.24.0",
-    "eslint": "^9.15.0",
+    "core-js": "^3.40.0",
+    "electron": "^34.1.1",
+    "esbuild": "^0.24.2",
+    "eslint": "^9.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^10.0.0",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^17.14.0",
-    "eslint-plugin-promise": "^7.2.0",
-    "execa": "^9.5.1",
-    "mocha": "^11.0.0",
-    "playwright": "^1.49.0",
-    "prettier": "^3.4.0",
+    "eslint-plugin-n": "^17.15.1",
+    "eslint-plugin-promise": "^7.2.1",
+    "execa": "^9.5.2",
+    "mocha": "^11.1.0",
+    "playwright": "^1.50.1",
+    "prettier": "^3.5.0",
     "progress-events": "^1.0.1",
     "source-map-support": "^0.5.21",
-    "ts-patch": "^3.2.1",
+    "ts-patch": "^3.3.0",
     "tsconfig-paths": "^4.2.0",
     "tscpaths": "^0.0.9",
     "typescript": "5.7.3",
-    "typescript-eslint": "^8.16.0",
-    "typescript-transform-paths": "^3.5.2"
+    "typescript-eslint": "^8.24.0",
+    "typescript-transform-paths": "^3.5.3"
   },
   "dependencies": {
-    "@helia/block-brokers": "^4.0.2",
-    "@libp2p/peer-id": "^5.0.8",
-    "@libp2p/webrtc": "^5.0.19",
+    "@helia/block-brokers": "^4.0.3",
+    "@libp2p/peer-id": "^5.0.12",
+    "@libp2p/webrtc": "^5.0.27",
     "@orbitdb/core": "^2.4.3",
     "blockstore-core": "^5.0.2",
     "blockstore-level": "^2.0.1",
     "browserify-fs": "^1.0.0",
-    "chokidar": "^4.0.1",
+    "chokidar": "^4.0.3",
     "crypto-browserify": "^3.12.1",
     "events": "^3.3.0",
     "genversion": "^3.2.0",
     "helia": "5.2.0",
-    "libp2p": "^2.3.1",
+    "libp2p": "^2.6.1",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "read-package-up": "^11.0.0",
     "rimraf": "^6.0.1",
     "stream-browserify": "^3.0.0",
     "uint8arrays": "^5.1.0",
-    "url-polyfill": "^1.1.12",
-    "uuid": "^11.0.3",
+    "url-polyfill": "^1.1.13",
+    "uuid": "^11.0.5",
     "wherearewe": "^2.0.1"
   },
   "pnpm": {
-    "onlyBuiltDependencies": ["@localfirst/auth", "@localfirst/crdx", "@localfirst/crypto", "@localfirst/shared", "classic-level", "core-js", "electron", "esbuild", "iso-constants", "msgpackr-extract", "node-datachannel"]
+    "onlyBuiltDependencies": [
+      "@localfirst/auth",
+      "@localfirst/crdx",
+      "@localfirst/crypto",
+      "@localfirst/shared",
+      "classic-level",
+      "core-js",
+      "electron",
+      "esbuild",
+      "iso-constants",
+      "msgpackr-extract",
+      "node-datachannel"
+    ]
   }
 }
