--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.6.12",
+  "version": "1.6.13",
   "license": "AGPL-3.0-or-later",
   "name": "@constl/utils-tests",
   "author": "Julien Jean Malard-Adam",
@@ -37,9 +37,9 @@
     "@chainsafe/libp2p-noise": "^16.0.1",
     "@chainsafe/libp2p-yamux": "^7.0.1",
     "@constl/bohr-db": "^1.2.2",
-    "@constl/ipa": "1.5.7",
+    "@constl/ipa": "1.5.13",
     "@eslint/js": "^9.20.0",
-    "@libp2p/circuit-relay-v2": "^3.1.11",
+    "@libp2p/circuit-relay-v2": "^3.1.12",
     "@libp2p/crypto": "^5.0.11",
     "@libp2p/identify": "^3.0.18",
     "@libp2p/interface": "^2.5.0",
@@ -51,17 +51,17 @@
     "@types/crypto-js": "^4.2.2",
     "@types/file-saver": "^2.0.7",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.4",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.24.0",
-    "@typescript-eslint/parser": "^8.24.0",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
     "aegir": "^45.0.9",
     "ajv": "^8.17.1",
     "buffer": "^6.0.3",
     "core-js": "^3.40.0",
-    "electron": "^34.1.1",
+    "electron": "^34.2.0",
     "esbuild": "^0.24.2",
-    "eslint": "^9.20.0",
+    "eslint": "^9.20.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-config-standard": "^17.1.0",
@@ -71,20 +71,20 @@
     "execa": "^9.5.2",
     "mocha": "^11.1.0",
     "playwright": "^1.50.1",
-    "prettier": "^3.5.0",
+    "prettier": "^3.5.1",
     "progress-events": "^1.0.1",
     "source-map-support": "^0.5.21",
     "ts-patch": "^3.3.0",
     "tsconfig-paths": "^4.2.0",
     "tscpaths": "^0.0.9",
     "typescript": "5.7.3",
-    "typescript-eslint": "^8.24.0",
+    "typescript-eslint": "^8.24.1",
     "typescript-transform-paths": "^3.5.3"
   },
   "dependencies": {
-    "@helia/block-brokers": "^4.0.3",
+    "@helia/block-brokers": "^4.0.4",
     "@libp2p/peer-id": "^5.0.12",
-    "@libp2p/webrtc": "^5.0.27",
+    "@libp2p/webrtc": "^5.1.0",
     "@orbitdb/core": "^2.4.3",
     "blockstore-core": "^5.0.2",
     "blockstore-level": "^2.0.1",
@@ -93,8 +93,8 @@
     "crypto-browserify": "^3.12.1",
     "events": "^3.3.0",
     "genversion": "^3.2.0",
-    "helia": "5.2.0",
-    "libp2p": "^2.6.1",
+    "helia": "5.2.1",
+    "libp2p": "^2.6.2",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "read-package-up": "^11.0.0",
@@ -107,6 +107,7 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@ipshipyard/node-datachannel",
       "@localfirst/auth",
       "@localfirst/crdx",
       "@localfirst/crypto",
