--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.0.3",
+  "version": "2.0.4",
   "license": "AGPL-3.0-or-later",
   "name": "@constl/utils-tests",
   "author": "Julien Jean Malard-Adam",
@@ -33,43 +33,43 @@
     "postbuild": "./dist/**/*"
   },
   "devDependencies": {
-    "@chainsafe/libp2p-noise": "^16.1.4",
+    "@chainsafe/libp2p-noise": "^16.1.5",
     "@chainsafe/libp2p-yamux": "^7.0.4",
-    "@constl/bohr-db": "^1.3.1",
+    "@constl/bohr-db": "^1.3.2",
     "@constl/ipa": "1.6.24",
-    "@eslint/js": "^9.32.0",
-    "@libp2p/circuit-relay-v2": "^3.2.23",
-    "@libp2p/crypto": "^5.1.7",
-    "@libp2p/identify": "^3.0.38",
-    "@libp2p/interface": "^2.10.5",
-    "@libp2p/websockets": "^9.2.18",
+    "@eslint/js": "^9.39.0",
+    "@libp2p/circuit-relay-v2": "^3.2.24",
+    "@libp2p/crypto": "^5.1.13",
+    "@libp2p/identify": "^3.0.39",
+    "@libp2p/interface": "^2.11.0",
+    "@libp2p/websockets": "^9.2.19",
     "@multiformats/multiaddr": "^12.5.1",
-    "@multiformats/multiaddr-matcher": "^3.0.0",
-    "@orbitdb/core-types": "^1.2.0",
+    "@multiformats/multiaddr-matcher": "^3.0.1",
+    "@orbitdb/core-types": "^1.2.1",
     "@orbitdb/feed-db": "^1.3.0",
     "@types/crypto-js": "^4.2.2",
     "@types/file-saver": "^2.0.7",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^24.1.0",
+    "@types/node": "^24.10.0",
     "@types/uuid": "^11.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.38.0",
-    "@typescript-eslint/parser": "^8.38.0",
-    "aegir": "^47.0.20",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "aegir": "^47.0.24",
     "ajv": "^8.17.1",
     "buffer": "^6.0.3",
-    "core-js": "^3.44.0",
+    "core-js": "^3.46.0",
     "electron": "^39.0.0",
-    "esbuild": "^0.25.8",
-    "eslint": "^9.32.0",
+    "esbuild": "^0.25.12",
+    "eslint": "^9.39.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-n": "^17.21.3",
+    "eslint-plugin-n": "^17.23.1",
     "eslint-plugin-promise": "^7.2.1",
     "execa": "^9.6.0",
-    "mocha": "^11.7.1",
-    "playwright": "^1.54.1",
+    "mocha": "^11.7.4",
+    "playwright": "^1.56.1",
     "prettier": "^3.6.2",
     "progress-events": "^1.0.1",
     "source-map-support": "^0.5.21",
@@ -77,31 +77,32 @@
     "tsconfig-paths": "^4.2.0",
     "tscpaths": "^0.0.9",
     "typescript": "5.9.3",
-    "typescript-eslint": "^8.38.0",
+    "typescript-eslint": "^8.46.2",
     "typescript-transform-paths": "^3.5.5"
   },
   "dependencies": {
     "@chainsafe/libp2p-gossipsub": "14.1.2",
-    "@helia/block-brokers": "^4.2.3",
-    "@libp2p/peer-id": "^5.1.8",
-    "@libp2p/webrtc": "^5.2.23",
+    "@helia/block-brokers": "^4.2.4",
+    "@libp2p/peer-id": "^5.1.9",
+    "@libp2p/webrtc": "^5.2.24",
     "@orbitdb/core": "^3.0.2",
     "blockstore-core": "^5.0.4",
-    "blockstore-level": "^2.0.3",
+    "blockstore-fs": "^2.0.5",
+    "blockstore-idb": "^2.0.4",
     "browserify-fs": "^1.0.0",
     "chokidar": "^4.0.3",
     "crypto-browserify": "^3.12.1",
     "events": "^3.3.0",
     "genversion": "^3.2.0",
     "helia": "5.5.1",
-    "libp2p": "^2.9.0",
+    "libp2p": "^2.10.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "read-package-up": "^11.0.0",
-    "rimraf": "^6.0.1",
+    "rimraf": "^6.1.0",
     "stream-browserify": "^3.0.0",
     "uint8arrays": "^5.1.0",
-    "url-polyfill": "^1.1.13",
+    "url-polyfill": "^1.1.14",
     "uuid": "^11.1.0",
     "wherearewe": "^2.0.1"
   },
